Wrap <a> inside <li> on sponsors' section Fix styling in _supporters.scss

--- a/src/assets/scss/_supporters.scss
+++ b/src/assets/scss/_supporters.scss
@@ -4,7 +4,7 @@
 	margin: 4em 0;
 	max-width: 900px;
 
-	li {
+	li > a {
 		margin-bottom: 4em;
 
 		@include media-breakpoint-up(sm) {
@@ -17,8 +17,9 @@
 
 	img {
 		width: 100%;
-		height: 100%;
+		height: auto;
 		max-width: 250px;
+		align-self: flex-start;
 	}
 }
 
@@ -27,11 +28,8 @@
 
 	h3 {
 		color: $pink;
+		font-size: calc(1.275rem + .3vw);
 	}
-}
-
-.sponsors-logo {
-	align-self: flex-start;
 }
 
 @keyframes rotator {
